fix: made /filenames accept an array of symbols
